<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Judul -->
    <TextView
        android:text="LOGIN"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Email -->
    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email_hint"
        android:padding="12dp"
        android:background="@color/text_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Password -->
    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@color/text_secondary"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Tombol Login -->
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <!-- Link ke Register -->
    <TextView
        android:id="@+id/tvToRegister"
        android:text="@string/no_account"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
